fixing button on mobile

--- a/assets/css/hoabean.css
+++ b/assets/css/hoabean.css
@@ -28,6 +28,9 @@
         border: none;
     
     }
+    p {
+        margin: 8rem;
+    }
     
 }
 
